2010-03-05  Martin Baulig  <martin@ximian.com>

	Use the new Soft Debugger API to abort invocations.

	* SoftDebuggerAdaptor.cs (MethodCall.Abort): Implement this.

	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated.

2010-03-03  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs: Don't catch the thread abort
	  exception, unless there is a catchpoint for it. Based on a
	  patch by Levi Bard.

2010-03-02  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Renamed variable to improve
	  readability.

	* SoftEvaluationContext.cs: When calling a method, make sure
	  value type arguments are properly boxed when required.

2010-03-01  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs:
	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated SDB dll, stops uncaught
	  exception handler getting all caught exceptions on older
	  Monos, and updates protocol.

2010-03-01  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Improved support for indexers.
	  Improved GetType implementation, so that it can now properly
	  instantiate generic types.

2010-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Implement enum conversions.

2010-02-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated.

	* SoftDebuggerSession.cs: Report unhandled exceptions.

2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerBacktrace.cs: Don't crash if the debugger
	  stopped and the current thread could not be found.

2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated.

	* SoftDebuggerAdaptor.cs: Add missing null check.

2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs:
	* SoftDebuggerSession.cs: Implement GetCurrentException.

2010-02-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: